# fpl

./: .user.yml  README.md  app.py  dbt_project.yml  dev.duckdb  load_fpl.py  profiles.yml  pyproject.toml  test.py
data/: analytics.duckdb
dlt/: load_fixtures.py  load_fpl.py
fpl_analytics/: create_model.sh
fpl_analytics/models/: _sources.yml
fpl_analytics/models/core/: dim_gameweeks.sql  dim_gameweeks.yml  fact_fixtures.sql  fact_fixtures.yml  obt_players.sql  obt_players.yml
fpl_analytics/models/staging/: stg_fixtures.sql  stg_fixtures.yml  stg_gameweeks.sql  stg_gameweeks.yml  stg_players.sql  stg_players.yml  stg_positions.sql  stg_positions.yml  stg_stats.sql  stg_stats.yml  stg_teams.sql  stg_teams.yml
